--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,13 @@
 @font-face {font-family:"pf_square_sans_pro_medium"; src:url("../fonts/pfsquaresanspro-medium-webfont.eot"); src:url("../fonts/pfsquaresanspro-medium-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/pfsquaresanspro-medium-webfont.svg#pf_square_sans_pro_mediumRg") format("svg"), url("../fonts/pfsquaresanspro-medium-webfont.ttf") format("truetype"); font-weight:normal; font-style:normal}
 @font-face {font-family:"pf_square_sans_pro_bold"; src:url("../fonts/pfsquaresanspro-bold-webfont.eot"); src:url("../fonts/pfsquaresanspro-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/pfsquaresanspro-bold-webfont.woff") format("woff"), url("../fonts/pfsquaresanspro-bold-webfont.ttf") format("truetype"), url("../fonts/pfsquaresanspro-bold-webfont.svg#pf_square_sans_probold") format("svg"); font-weight:normal; font-style:normal}
 
-body {width:100%; margin:0; padding:0; font:14px/18px "PT Sans", aria, helvetica, sans-serif; color:#737377; background:#fff; overflow-x:hidden}
+body {width:100%; margin:0; padding:0; font:14px/18px "PT Sans", aria, helvetica, sans-serif; color:#393939; background:#fff; overflow-x:hidden}
 
 a {color:#716f87; outline:none}
 
 img {border:none}
+
+.wrapper {position:relative}
 
 .side {position:fixed; z-index:10; left:0; top:0; height:100%; background:#fff}
 .side-inner {position:relative}
@@ -69,20 +71,61 @@ footer {position:fixed; left:0; bottom:0; width:100%; min-width:850px; height:54
     .side-inner.hover .side-ctrl {display:none}
 }
 
-.content {position:relative; padding:69px 30px 80px 30px; margin-left:50px; max-width:700px}
+.content {position:relative; padding:67px 30px 80px 30px; margin-left:50px; max-width:700px}
 @media (min-width:769px) {
     .content {margin-left:420px; padding-left:80px; padding-right:80px}
 }
-.content h1 {color:#1b1464; margin:0; padding:0 0 44px 0; font:48px/48px "pf_square_sans_pro_light", "PT Sans", aria, helvetica, sans-serif}
-.content h2 {color:#1b1464; margin:0; padding:26px 0 16px 0; font:24px/24px "pf_square_sans_pro", "PT Sans", aria, helvetica, sans-serif}
-.content p {margin:0; padding:0 0 18px 0}
-.content ul {margin:0; padding:0 0 9px 0; list-style:none}
-.content ul li {margin:0; padding:0 0 9px 17px; background:url(../images/li.png) no-repeat left 6px}
+.content h1 {color:#1b1464; margin:0 0 26px 0; padding:0; font:48px/48px "pf_square_sans_pro_light", "PT Sans", aria, helvetica, sans-serif}
+.content h2 {color:#1b1464; margin:26px 0; padding:0; font:36px/36px "pf_square_sans_pro_light", "PT Sans", aria, helvetica, sans-serif}
+.content-back-link+h2 {margin-top:0}
+.content h3 {color:#1b1464; margin:29px 0 19px 0; padding:0; font:24px/24px "pf_square_sans_pro_light", "PT Sans", aria, helvetica, sans-serif}
+.content h2+h3 {margin-top:-16px}
+.content h4{color:#1b1464; margin:34px 0 20px 0; padding:0; font:18px/18px "pf_square_sans_pro_light", "PT Sans", aria, helvetica, sans-serif}
+.content h3+h4 {margin-top:-2px}
+.content p {margin:18px 0; padding:0}
+.content ul {margin:18px 0; padding:0; list-style:none}
+.content ul li {margin:9px 0; padding:0 0 0 14px; background:url(../images/li.png) no-repeat left 6px}
+.content ul li ul {margin:9px 0 18px 0; padding:0 0 0 4px}
+.content ul li ul li {background:url(../images/lili.png) no-repeat left 6px}
+.content ol {margin:18px 0; padding:0 0 0 17px; list-style:none; counter-reset:point}
+.content ol li {margin:0 9px; padding:0}
+.content ol li:before {content:counter(point)". "; counter-increment:point 1; font-weight:bold; color:#000}
+.content blockquote {margin:20px 0 45px 0; padding:16px 20px 20px 20px; background:#e8f3f9; color:#000; font-style:italic}
+.content table {width:100%; border-collapse:collapse; margin:2em 0; border-bottom:2px solid #1b1464}
+.content table th {color:#fff; font:18px/18px "pf_square_sans_pro_light", "PT Sans", aria, helvetica, sans-serif; vertical-align:middle; padding:17px 20px 19px 20px; text-align:center; background:#1b1464}
+.content table td {vertical-align:middle; padding:7px 20px 9px 20px; text-align:center; color:#333; border-top:1px solid #f2f3f4}
+.content table td.table-row-title {color:#000; font:18px/18px "pf_square_sans_pro_light", "PT Sans", aria, helvetica, sans-serif; text-align:left}
+.content table tbody tr:first-child td {border-top:none}
+.content table p {margin:0; padding:0}
+.content hr {margin:36px 0; padding:0; height:1px; background:#f3f2f4; outline:none; display:block; position:relative; overflow:hidden; width:100%; font-size:0; line-height:0; border:none}
+.text-old {color:#898989; text-decoration:line-through}
+
+.btn {display:inline-block; vertical-align:top; border:none; -webkit-appearance:none; text-decoration:none; overflow:visible; margin:0; padding:0 20px; outline:none; min-width:130px; height:41px; text-transform:uppercase; text-align:center; background:#1b1464; color:#fff; font:14px/41px "pf_square_sans_pro_medium", "PT Sans", aria, helvetica, sans-serif; cursor:pointer}
+input.btn {min-width:170px}
+.btn:hover {background:#2187c9}
+.btn:active {background:#2178c9}
+.btn-2 {background:#ffc000; color:#030227}
+.btn-2:hover {background:#ffa200}
+.btn-2:active {background:#e49100}
+
 .content-img {position:relative; margin:38px -80px 17px -80px; line-height:0}
+.content-img-descr {margin:0 0 31px 0; padding:0 0 19px 0; border-bottom:1px solid #f3f2f4; color:#959595}
+.content-img-descr h4 {margin:0 0 1px 0}
+.content-img-descr p {margin:0}
 @media (max-width:768px) {
     .content-img {margin-left:-30px; margin-right:-30px}
 }
 .content-img img {width:100%}
+
+.content-back-link {position:absolute; left:30px; top:0; font:14px/33px "pf_square_sans_pro_light", "PT Sans", aria, helvetica, sans-serif}
+.content-back-link-2 {position:relative; left:auto; top:auto; width:100%; overflow:hidden; margin:36px 0 0 0}
+.content-back-link a {float:left; color:#fff; background:#1f1584; padding:0 20px; text-decoration:none}
+.content-back-link a:hover {background:#2187c9}
+.content-back-link a:active {background:#2178c9}
+@media (min-width:769px) {
+    .content-back-link {left:80px}
+    .content-back-link-2 {left:auto}
+}
 
 .map {position:relative; margin-left:50px; max-width:1100px}
 @media (min-width:769px) {
@@ -223,3 +266,159 @@ footer {position:fixed; left:0; bottom:0; width:100%; min-width:850px; height:54
 .main-ctrl a span {display:block; position:absolute; left:4px; top:4px; width:16px; height:16px; background:#1b1464; -moz-border-radius:8px; -webkit-border-radius:8px; border-radius:8px; behavior:url(./js/PIE.htc)}
 .main-ctrl a.active {background:#fcb713}
 .main-ctrl a.active span {display:none}
+
+.direction {width:100%; padding:0 0 37px 0}
+.direction:after {content:"."; display:block; clear:both; visibility:hidden; height:0}
+.direction-photo {float:left; line-height:0; width:180px}
+.direction-container {margin-left:200px}
+.direction-name {color:#1b1464; font:24px/24px "pf_square_sans_pro_light", "PT Sans", aria, helvetica, sans-serif; padding:6px 0 0 0}
+.direction-post {color:#393939; font-family:"pf_square_sans_pro_light", "PT Sans", aria, helvetica, sans-serif; margin-top:-1px}
+.direction-phone {color:#393939; font-weight:bold; padding:8px 0 0 0}
+
+.partners {width:100%; line-height:0; font-size:0; letter-spacing:-1px}
+.partners-item {display:inline-block; min-width:33%; text-align:center; padding:0 0 18px 0; vertical-align:middle}
+
+.presentation {padding:15px 0 45px 0}
+.presentation-img {line-height:0}
+.presentation-info {width:100%; display:table}
+.presentation-text {display:table-cell; padding:31px 90px 0 0; vertical-align:top; width:100%}
+.presentation-name {font:24px/24px "pf_square_sans_pro_light", "PT Sans", aria, helvetica, sans-serif; color:#1b1464}
+.presentation-authors {color:#393939; padding:7px 0 0 0}
+.presentation-link {display:table-cell; padding:35px 0 0 0; vertical-align:top}
+.presentation-link-inner {padding:0 0 0 65px; height:54px; background:url(../images/presentation-link.png) no-repeat; white-space:nowrap}
+.presentation-link-title {font:18px/18px "pf_square_sans_pro", "PT Sans", aria, helvetica, sans-serif; padding:8px 0 0 0}
+.presentation-link-size {color:#a9a9a9}
+
+@media (max-width:768px) {
+    .presentation-info,
+    .presentation-text ,
+    .presentation-link {display:block}
+}
+
+.publication {width:100%; padding:15px 0 30px 0}
+.publication:after {content:"."; display:block; clear:both; visibility:hidden; height:0}
+.publication-img {float:left; width:270px; line-height:0}
+.publication-info {margin-left:320px}
+.publication-info-inner {float:left; width:100%}
+.publication-text {padding:30px 0 0 0}
+.publication-name {font:24px/24px "pf_square_sans_pro_light", "PT Sans", aria, helvetica, sans-serif; color:#1b1464}
+.publication-authors {color:#393939; padding:7px 0 0 0}
+.publication-link {padding:40px 0 0 0}
+.publication-link-inner {padding:0 0 0 65px; height:54px; background:url(../images/presentation-link.png) no-repeat; white-space:nowrap}
+.publication-link-title {font:18px/18px "pf_square_sans_pro", "PT Sans", aria, helvetica, sans-serif; padding:8px 0 0 0}
+.publication-link-size {color:#a9a9a9}
+
+.news-detail-date {color:#c1c1c2; font:18px/36px "pf_square_sans_pro_light", "PT Sans", aria, helvetica, sans-serif; margin:24px 0 29px 0}
+
+.sert-list {margin:18px 0; width:100%; overflow:hidden; position:relative; font-size:0; line-height:0; letter-spacing:-1px}
+.sert-list-inner {position:relative; margin:0 0 0 -57px}
+.sert-list a {display:inline-block; vertical-align:top; width:195px; margin:0 0 27px 57px; text-decoration:none; color:#525252}
+.sert-list-big .sert-list-inner {margin-left:-66px}
+.sert-list-big a {width:254px; margin-left:66px}
+.sert-list-preview {width:195px; height:261px; background:url(../images/sert-bg.png); position:relative}
+.sert-list-big .sert-list-preview {width:254px; height:338px; background:url(../images/sert-big-bg.png)}
+.sert-list-preview span {position:absolute; left:17px; top:17px; width:161px; height:226px; text-align:center; font:14px/226px "pf_square_sans_pro", "PT Sans", aria, helvetica, sans-serif; color:#fff; letter-spacing:0}
+.sert-list-big .sert-list-preview span {left:22px; top:22px; width:254px; height:338px; line-height:338px}
+.sert-list-preview div {position:absolute; left:17px; top:17px; width:161px; height:226px; overflow:hidden}
+.sert-list-big .sert-list-preview div {left:22px; top:22px; width:254px; height:338px}
+.sert-list-name {text-align:center; font:14px/18px "pf_square_sans_pro", "PT Sans", aria, helvetica, sans-serif; letter-spacing:0; padding:18px 10px 0 10px}
+
+.window {position:absolute; left:0; top:0; width:100%; height:100%; z-index:99997; overflow:auto}
+.window-overlay {position:absolute; left:0; top:0; width:100%; height:100%; z-index:99998; background:#000; opacity:.7; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=70)}
+.window-loading {position:absolute; left:50%; top:50%; width:24px; height:24px; margin:-12px 0 0 -12px; background:url(../images/window-loading.gif)}
+.window-container {position:absolute; z-index:99999; left:50%; top:50%}
+.window-container-load {position:fixed; left:-9999px; top:-9999px}
+.window-content {position:relative; background:#fff}
+.window-close {display:block; position:absolute; right:-52px; top:0; width:52px; height:52px; background:#1f1584 url(../images/window-close.png) no-repeat center}
+.window-close:hover {background-color:#2187c9}
+.window-close:active {background-color:#2178c9}
+
+.window .content {position:relative; padding:10px 40px; margin-left:0; max-width:none}
+@media (min-width:769px) {
+    .window .content {margin-left:0; padding-left:40px; padding-right:40px}
+}
+
+.service {max-width:1000px}
+
+.service-top {width:100%; background:#2187c9; background:#2187c9; text-transform:uppercase; font-size:12px; line-height:14px; position:relative; overflow:hidden}
+.service-top:after {content:"."; display:block; clear:both; visibility:hidden; height:0}
+.service-top-prev {float:left; display:table; max-width:200px; margin:0 0 0 40px}
+.service-top-next {float:right; display:table; max-width:200px; margin:0 40px 0 0}
+.service-top-prev a {display:table-cell; padding:0 0 0 30px; height:54px; background:url(../images/service-top-left.png) no-repeat left center; vertical-align:middle; text-decoration:none; color:#fff}
+.service-top-next a {display:table-cell; padding:0 30px 0 0; text-align:right; height:54px; background:url(../images/service-top-right.png) no-repeat right center; vertical-align:middle; text-decoration:none; color:#fff}
+
+.service-header {width:100%}
+.service-header:after {content:"."; display:block; clear:both; visibility:hidden; height:0}
+.service-order-link {float:right}
+.service-order-link a {width:170px}
+.service-header h2 {margin-right:240px}
+
+.structure-list {font-size:0; line-height:0; letter-spacing:-1px; position:relative; width:100%; overflow:hidden}
+.structure-list-inner {position:relative; margin-top:-1px}
+.structure-item {display:inline-block; vertical-align:top; width:50%; min-width:200px; border-top:1px solid #f3f2f4; padding:28px 0 24px 0}
+.structure-item-name {padding:0 30px 0 0; font:18px/18px "pf_square_sans_pro_light", "PT Sans", aria, helvetica, sans-serif; letter-spacing:0}
+.structure-item-descr {padding:19px 30px 0 0; font-size:14px; line-height:18px; letter-spacing:0}
+.structure-item:nth-child(even) .structure-item-name {padding:0 0 0 30px}
+.structure-item:nth-child(even) .structure-item-descr {padding:19px 0 0 30px}
+@media (max-width:1000px) {
+    .structure-item {display:block; width:auto}
+    .structure-item-name {padding-right:0}
+    .structure-item-descr {padding-right:0}
+    .structure-item:nth-child(even) .structure-item-name {padding-left:0}
+    .structure-item:nth-child(even) .structure-item-descr {padding-left:0}
+}
+
+.service-link {margin-left:14px}
+
+.structure-table table {width:100%; border-collapse:collapse; border-bottom:0}
+.structure-table table th {background:none; color:#1b1464; font-size:24px; line-height:24px; padding:0; text-align:center}
+.structure-table table th div {width:336px; margin:0 auto; border:2px solid #1b1464; padding:16px 0 21px 0}
+.structure-table table td {vertical-align:middle; padding:0 20px; height:85px; width:50%; text-align:left; border:2px solid #fcb713; font:18px/18px "pf_square_sans_pro_light", "PT Sans", aria, helvetica, sans-serif}
+.structure-table table td .service-link {margin-left:0; text-decoration:none}
+.structure-table table td .service-link:hover {text-decoration:underline}
+.structure-table table td.structure-table-cross {width:20px; padding:0; border:none; background:url(../images/structure-cross.png) no-repeat center}
+.structure-table table td.structure-table-cross-last {background:url(../images/structure-cross-2.png) no-repeat center}
+.structure-table table td.structure-table-sep-side {padding:0; border:none; height:auto}
+.structure-table table td.structure-table-sep-1 {height:37px; width:20px; padding:0; border:none; background:url(../images/structure-dots.png) repeat-y center top}
+.structure-table table td.structure-table-sep-2 {height:19px; width:20px; padding:0; border:none; background:url(../images/structure-dots.png) repeat-y center top}
+
+.structure-table-2 table {width:100%; border-collapse:collapse; border-bottom:0}
+.structure-table-2 table td {vertical-align:middle; padding:0 20px; height:89px; width:50%; border-top:none; border-left:20px solid #fff; border-bottom:20px solid #fff; text-align:left; font:18px/18px "pf_square_sans_pro_light", "PT Sans", aria, helvetica, sans-serif; background-color:#030227; background-position:center; background-repeat:no-repeat; -webkit-background-size:cover; -moz-background-size:cover; -o-background-size:cover; background-size:cover}
+.structure-table-2 table td.structure-bg-01 {background-image:url(../images/structure-table-bg-01.jpg)}
+.structure-table-2 table td.structure-bg-02 {background-image:url(../images/structure-table-bg-02.jpg)}
+.structure-table-2 table td.structure-bg-03 {background-image:url(../images/structure-table-bg-03.jpg)}
+.structure-table-2 table td.structure-bg-04 {background-image:url(../images/structure-table-bg-04.jpg)}
+.structure-table-2 table td.structure-bg-05 {background-image:url(../images/structure-table-bg-05.jpg)}
+.structure-table-2 table td.structure-bg-06 {background-image:url(../images/structure-table-bg-06.jpg)}
+.structure-table-2 table td.structure-bg-07 {background-image:url(../images/structure-table-bg-07.jpg)}
+.structure-table-2 table td.structure-bg-08 {background-image:url(../images/structure-table-bg-08.jpg)}
+.structure-table-2 table td.structure-bg-09 {background-image:url(../images/structure-table-bg-09.jpg)}
+.structure-table-2 table td.structure-bg-10 {background-image:url(../images/structure-table-bg-10.jpg)}
+.structure-table-2 table td.structure-bg-11 {background-image:url(../images/structure-table-bg-11.jpg)}
+.structure-table-2 table td:first-child {border-left:none}
+.structure-table-2 table td .service-link {margin-left:0; text-decoration:none; color:#fff}
+.structure-table-2 table td .service-link:hover {text-decoration:underline}
+
+.news-header {width:100%}
+.news-header:after {content:"."; display:block; clear:both; visibility:hidden; height:0}
+.news-current {float:right; color:#c1c1c2; font:24px/24px "pf_square_sans_pro", "PT Sans", aria, helvetica, sans-serif; padding:14px 0 0 0}
+.news-header h1 {margin-right:50px}
+
+.news-list {position:relative; overflow:hidden; width:100%; font-size:0; line-height:0; letter-spacing:-1px; margin-top:-25px}
+.news-list-inner {position:relative; margin-top:-1px; margin-left:-20px}
+.news-item {display:inline-block; vertical-align:top; width:33%; min-width:200px; border-top:1px solid #f3f2f4; padding:39px 0 38px 0}
+@media (max-width:1000px) {
+    .news-item  {display:block; width:100%}
+}
+.news-item-name {font:16px/18px "pf_square_sans_pro", "PT Sans", aria, helvetica, sans-serif; letter-spacing:0; padding:0 0 0 20px}
+.news-item-name a {text-decoration:none}
+.news-item-name a:hover {text-decoration:underline}
+.news-item-anonce {font-size:12px; line-height:18px; color:#737377; letter-spacing:0; padding:20px 0 0 20px}
+.news-item-anonce p {margin:18px 0 0 0}
+.news-item-anonce p:first-child {margin-top:0}
+.news-item-date {font:12px/18px "pf_square_sans_pro_light", "PT Sans", aria, helvetica, sans-serif; color:#c1c1c2; letter-spacing:0; padding:9px 0 0 20px}
+
+.pager {text-align:center; font-size:0; line-height:0; font-family:"pf_square_sans_pro", "PT Sans", aria, helvetica, sans-serif; letter-spacing:-1px; margin:18px 0}
+.pager a {display:inline-block; width:25px; height:25px; margin:0 2px 0 3px; vertical-align:middle; background:#1b1464; color:#fff; text-decoration:none; letter-spacing:0; font-size:14px; line-height:25px}
+.pager a.active {color:#000; background:#fcb713; padding:2px}
+.pager span {display:inline-block; width:13px; height:3px; background:url(../images/pager-dots.png); vertical-align:middle; margin:0 9px 0 8px}
